--- a/manifest.json
+++ b/manifest.json
@@ -2,20 +2,20 @@
   "name": "Music by Steff",
   "short_name": "Music",
   "description": "Lecteur de musique personnel",
-  "start_url": "/",
+  "start_url": "/music-player/",
   "display": "standalone",
   "background_color": "#1f2937",
   "theme_color": "#2dd4bf",
   "orientation": "portrait",
   "icons": [
     {
-      "src": "icon.png",
+      "src": "/music-player/icon.png",
       "sizes": "180x180",
       "type": "image/png",
       "purpose": "any maskable"
     },
     {
-      "src": "icon.png",
+      "src": "/music-player/icon.png",
       "sizes": "512x512",
       "type": "image/png",
       "purpose": "any maskable"
